inicio do produto componente

--- a/ListFy-Pwa-Wasm/Components/ProdutoComponente.razor
+++ b/ListFy-Pwa-Wasm/Components/ProdutoComponente.razor
@@ -1,4 +1,25 @@
-﻿<h3>ProdutoComponente</h3>
+﻿<div id="Produto" class="d-flex align-items-center shadow-sm ">
+    <div id="ProdutoImg">
+        <img src="./img/listfy.png" />
+    </div>
+    <div id="ProdutoConteudo" class="d-flex flex-column">
+        <div>
+            <p>Nome Produto</p>
+        </div>
+        <div class="d-flex flex-row gap-5">
+            <div>
+                <p>R$ 125,99</p>
+            </div>
+            <div>
+                <p>Unit: 9</p>
+            </div>
+        </div>
+    </div>
+    <div id="ProdutoAction" class="d-flex flex-column justify-content-between">
+        <i class="bi bi-list-check"></i>
+        <i class="bi bi-three-dots-vertical"></i>
+    </div>
+</div>
 
 @code {
 
